Changelog for plone.i18n

    (name of developer listed in brackets)

plone.i18n - 1.0rc1 Released July 9, 2007

    - Merged udg-sprint branch. This adds a Zope3-based configurable language
      negotiator with similar functionality as PloneLanguageTool. It is not
      enabled by default.
      [hannosch]

    - Added the reference to the Faroese flag.
      [deo]

    - Remove more punctuation characters as for example using a comma in the
      title results in a not so friendly ID. This closes
      http://dev.plone.org/plone/ticket/6585.
      [hannosch]

plone.i18n - 1.0b1 Released March 5, 2007

    - Initial implementation.
      [hannosch]