@@ -2,6 +2,12 @@ Changelog for plone.i18n
 
     (name of developer listed in brackets)
 
+plone.i18n - Unreleased
+
+    - Added Polish normalizer which normalizes 'ł' to l. This fixes
+      http://dev.plone.org/plone/ticket/6845.
+      [hannosch]
+
 plone.i18n - 1.0rc1 Released July 9, 2007
 
     - Merged udg-sprint branch. This adds a Zope3-based configurable language
